# tool-scan

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  ISSUES_PUNCHLIST.md  LICENSE  PRESS_RELEASE.md  README.md  ROADMAP.md  llms.txt  pyproject.toml
.github/workflows/: publish.yml  release.yml  test.yml
docs/: baseline.md  config.md  output_schema.md  report.schema.json
examples/: .tool-scan.toml  baseline.json  sample_plugin.py  sample_tool.json
src/tool_scan/: __init__.py  __main__.py  baseline.py  cli.py  compliance_checker.py  config.py  discovery.py  grader.py  junit.py  profile.py  sarif.py  schema_validator.py  security_scanner.py  tool_validator.py
src/tool_scan/rules/: __init__.py  plugin_loader.py
tests/: __init__.py  conftest.py  test_baseline.py  test_cli_batch1.py  test_compliance_batch5.py  test_compliance_checker.py  test_config.py  test_discovery.py  test_error_handling_batch4.py  test_grader_batch2.py  test_integration.py  test_junit.py  test_plugins.py  test_profile.py  test_report_schema.py  test_sarif.py  test_security_scanner.py  test_security_scanner_batch3.py  test_summary.py  test_suppress.py  test_tool_validator.py  test_version.py
tests/fixtures/plugins/: sample_rule.py
tests/unit/: test_cli_large_batch_smoke.py  test_performance_no_recompile.py
