[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tool-scan"
version = "1.1.1"
description = "Security scanner for MCP (Model Context Protocol) tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "MCP Tool Shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "security",
    "scanner",
    "validation",
    "llm",
    "ai",
    "tools",
    "prompt-injection",
    "tool-poisoning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
tool-scan = "tool_scan.cli:main"

[project.urls]
Homepage = "https://github.com/mcp-tool-shop-org/tool-scan"
Documentation = "https://github.com/mcp-tool-shop-org/tool-scan#readme"
Repository = "https://github.com/mcp-tool-shop-org/tool-scan"
Issues = "https://github.com/mcp-tool-shop-org/tool-scan/issues"
Changelog = "https://github.com/mcp-tool-shop-org/tool-scan/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tool_scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
